<resources>
    <string name="app_name">My Application</string>
    <string name="foiz">%</string>
    <string name="nol">0</string>
    <string name="teng">=</string>
    <string name="kopaytiruv">*</string>
    <string name="plus">-</string>
    <string name="qavs_minus">+/-</string>
    <string name="minus">-</string>
    <string name="boluv">/</string>
    <string name="point">.</string>
</resources>