<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/point"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/point"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="1"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/point"
            app:layout_constraintEnd_toStartOf="@id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="4"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@id/five"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="2"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintEnd_toStartOf="@id/three"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@id/five"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kopaytiruv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/kopaytiruv"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/boluv"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            android:layout_height="70dp"
            android:layout_width="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="8"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@id/five"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@id/qavs_minus"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="7"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="3"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/delete_last"
            app:layout_constraintEnd_toStartOf="@id/plus"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_last"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/delete_last"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/teng"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/three"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/c"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/gray_light"
            android:text="C"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@id/qavs_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="6"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@id/three"
            app:layout_constraintEnd_toStartOf="@id/minus"
            app:layout_constraintStart_toEndOf="@id/five"
            app:layout_constraintTop_toBottomOf="@id/nine"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="219dp"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/foiz"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/foiz"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintEnd_toStartOf="@id/boluv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/qavs_minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="9"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintEnd_toStartOf="@+id/kopaytiruv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/foiz"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints,UnknownId"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/nol"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_last"
            app:layout_constraintStart_toEndOf="@+id/point"
            app:layout_constraintTop_toBottomOf="@id/two"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/teng"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/teng"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_last"
            app:layout_constraintTop_toBottomOf="@+id/plus"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="5"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@id/two"
            app:layout_constraintEnd_toStartOf="@id/six"
            app:layout_constraintStart_toEndOf="@id/four"
            app:layout_constraintTop_toBottomOf="@id/eight"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/teng"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/three"
            app:layout_constraintTop_toBottomOf="@+id/minus"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/qavs_minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/qavs_minus"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@id/eight"
            app:layout_constraintEnd_toStartOf="@id/foiz"
            app:layout_constraintStart_toEndOf="@+id/c"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/six"
            app:layout_constraintTop_toBottomOf="@+id/kopaytiruv"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/boluv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/boluv"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/kopaytiruv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toEndOf="@+id/foiz"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613"></TextView>

    <TextView
        android:id="@+id/operand"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="1.0"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
